[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
config = "^0.5.1"
TA-Lib-binary = "^0.4.21"
python-binance = "^1.0.16"
datetime2 = "^0.9.4"
pandas-ta = "^0.3.14-beta.0"
binance-connector-python = "^0.6.0"
websocket-client = "^1.4.1"
requests = "^2.28.1"
talib-binary = "^0.4.19"
websocket = "^0.2.1"
matplotlib = "^3.6.0"
pandas = "^1.5.0"
binance = "^0.3"
hickle = "^5.0.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
